[gd_scene load_steps=40 format=2]

[ext_resource path="res://Images/guy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Jumpman Jump.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Jumpman_Footstep1Shot_A.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Jumpman_LadderFeet_Muted_InTempo.wav" type="AudioStream" id=5]
[ext_resource path="res://Images/Jumpman Guy 4 BIGFOOT walking frames.png" type="Texture" id=6]
[ext_resource path="res://Images/Jumpman Climbing Better!.png" type="Texture" id=7]
[ext_resource path="res://Images/JumpmanFollowSpot_black_Bigger+Softer.png" type="Texture" id=8]
[ext_resource path="res://Images/Running_Guy_Color.png" type="Texture" id=9]
[ext_resource path="res://Images/Jumpman Jumping Animated_2020-12-17.png" type="Texture" id=10]
[ext_resource path="res://Sounds/Jumpman_Footstep1Shot_B.ogg" type="AudioStream" id=11]
[ext_resource path="res://Sounds/fall.ogg" type="AudioStream" id=12]
[ext_resource path="res://Images/JumpmanStanding_FIXED.png" type="Texture" id=13]
[ext_resource path="res://Sounds/Player_GetsHit_VOICE_2.ogg" type="AudioStream" id=14]
[ext_resource path="res://Scripts/WalkSound.gd" type="Script" id=15]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -28, 8, -24, 8, 30, 7, 31, -7, 31, -8, 30, -8, -24, 0, -28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "climbing",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walking_old",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ) ],
"loop": false,
"name": "jumping_old",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "stance",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
z_index = 4
collision_layer = 2
collision_mask = 45
script = ExtResource( 2 )

[node name="CollisionShape WALK" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0.0208773, -0.235302 )
texture = ExtResource( 1 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -2.0

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
script = ExtResource( 15 )

[node name="WalkSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="LadderSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.5

[node name="WalkingSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 0 )
frames = SubResource( 24 )
animation = "standing"
speed_scale = 1.25
centered = false
offset = Vector2( -31, -32 )

[node name="FallDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -3.0

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="FollowSpot" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.768627 )
z_index = 500
texture = ExtResource( 8 )
